unsubsribe wordings and ui alignments fixed in edit and manage contact page create campaign contact modal popup ui alignments fixed fixed signup page redirects to loggged in dashboard page from team member or partner login first time

--- a/src/app/campaigns/create-campaign/create-campaign.component.css
+++ b/src/app/campaigns/create-campaign/create-campaign.component.css
@@ -1091,3 +1091,5 @@ background: #5bb1d4;
   position: absolute;
   top: 5px;
 }
+@media screen and (min-width:601px){.modal-css{  width: 45% !important; right: 0 !important;}}
+@media screen and (max-width:600px){.modal-css {width: 100% !important; right: 0 !important;}}
